# S-UNL

./: .gitignore  ABLATION_STUDY_GUIDE.md  README.md  pyproject.toml
configs/: eval_paraQ.yaml
configs/data/: unlearn_withParaQ.yaml
configs/data/datasets/: TOFU_QA_forget_augmented.yaml  TOFU_QA_forget_augmented_idk.yaml
configs/eval/: tofu_paraQ.yaml
configs/eval/tofu_metrics/: aggregate_score.yaml  memorization_score.yaml  privacy_score.yaml  utility_score.yaml
configs/experiment/eval/tofu/: paraphrase.yaml  tofu_paraQ.yaml
configs/experiment/unlearn/tofu/: default_no_eval.yaml  idk_paraphrased.yaml  paraphrased.yaml  paraphrased_dpo.yaml
docs/: mia_loss_explanation.md  mia_metrics_complete_guide.md
scripts/: paraphrases_ablation.sh  test.py  test_ds.py
scripts/generation/: generate_paraphrases.py
scripts/plot/: plot_ablation_results.py  plot_detailed_metrics.py  plot_epoch_evolution.py
src/: disable_ssl.py  eval.py  train.py
src/data/: __init__.py  augmented_qa_dataset.py  augmented_qa_with_idk_dataset.py
src/evals/metrics/: __init__.py  memorization.py  privacy.py  utility.py
src/model/: __init__.py
src/trainer/: base.py
src/trainer/unlearn/: pdu.py  simnpo.py
tesi/: metriche.tex  studio.tex  unlearning.tex
