[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "open-unlearning"
version = "0.1.0"
authors = [
    {name = "Vineeth Dorna", email = "vineethdorna@gmail.com"},
    {name = "Anmol Mekala", email = "m.anmolreddy@gmail.com"}
]
description = "A library for machine unlearning in LLMs."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dynamic = ["dependencies"]

[project.urls]
Homepage = "https://github.com/locuslab/open-unlearning"
Repository = "https://github.com/locuslab/open-unlearning"

[project.optional-dependencies]
lm-eval = ["lm-eval==0.4.8"]
dev = [
    "pre-commit==4.0.1",
    "ruff==0.6.9",
]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.packages.find]
where = ["."]
include = ["open_unlearning*"]